Update youtube api client version